# 3d-classification

./: .gitignore  AGENTS.md  IMPLEMENTATION_NOTES.md  README.md  dataset.py  glb_silhouette_dataset.py  model.py  pyproject.toml  train.py  train_classifier.py
configs/: debug_fixed_ring4.yaml  debug_mvtn_circular4.yaml  debug_single_view.yaml  fixed_ring4.yaml  generate_silhouettes.yaml  mvtn_circular4.yaml  silhouette_fixed_ring4.yaml  silhouette_fixed_ring4_top100.yaml  silhouette_fixed_ring4_top100_richview.yaml  silhouette_single_view.yaml  silhouette_single_view_top100.yaml  silhouette_single_view_top100_richview.yaml  single_view.yaml  splits.yaml  splits_stratified.yaml  train_mvcnn.yaml  view_transformer4.yaml
configs/debug/: debug_fixed_ring4.yaml  debug_mvtn_circular4.yaml  debug_single_view.yaml  debug_view_transformer4.yaml
configs/top100/: silhouette_fixed_ring4_top100.yaml  silhouette_single_view_top100.yaml
docs/: data_pipeline.md  evaluation.md  experiment_workflow.md  setup.md
docs/experiments/: fixed_ring4.md  fixed_ring4_details.md  index.md  mvtn_circular4.md  mvtn_circular4_details.md  single_view.md  single_view_details.md  view_transformer4.md
docs/ja/: README.md  data_pipeline.md  evaluation.md  experiment_workflow.md
docs/ja/experiments/: fixed_ring4_details.md  index.md  mvtn_circular4.md  mvtn_circular4_details.md  single_view.md  single_view_details.md  view_transformer4.md
scripts/: _bootstrap.py  audit_assets.py  bootstrap_env.py  build_splits.py  evaluate.py  evaluate_illustrations.py  fetch_assets.py  fetch_illustrations.py  generate_silhouettes.py  illustration_to_silhouette.py  inspect_mesh_cache.py  prepare_mesh_cache.py  prepare_render_cache.py  prepare_rgb_render_cache.py  render_contact_sheet.py  train.py  validate_splits.py
src/pokemon_3d_cls/: __init__.py  config.py  data.py  environment.py  evaluation.py  generation.py  io.py  models.py  paths.py  splits.py  training.py
src/pokemon_3d_cls/assets/: __init__.py  audit.py  glb.py  pokeapi.py
src/pokemon_3d_cls/experiments/: __init__.py  dataset.py  (+5 more)
tests/: test_assets.py  test_config.py  test_data.py  test_mesh_normalize.py  test_metrics.py  test_models.py  test_mvtn.py  test_paths.py  test_rendering.py  test_rgb_render_cache.py  test_silhouette_dataset.py  test_splits.py
(+11 files in other folders)
