[project]
name = "pokemon-3d-classification"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "DracoPy>=1.4",
    "iopath>=0.1.10",
    "matplotlib>=3.9",
    "numpy>=2.0",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "requests>=2.32",
    "scikit-learn>=1.5",
    "tensorboard>=2.17",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "trimesh>=4.4",
    "tqdm>=4.66",
    "plotly>=6.8.0",
]

[dependency-groups]
dev = [
    "pyright[nodejs]>=1.1",
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.uv]
package = false
default-groups = "all"

[tool.ruff]
exclude = [
    ".venv",
    ".uv-cache",
    ".ruff_cache",
]
line-length = 120
indent-width = 4
target-version = "py310"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["F", "B", "I", "E", "W"]
ignore = ["E402"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["pokemon_3d_cls"]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.10"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
reportMissingTypeStubs = false
exclude = [
    "**/__pycache__/**",
    "**/node_modules/**",
    "**/.*",
    ".venv",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
